--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^7.14.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.2",
+    "sequelize-cli": "^5.5.1"
   }
 }
